--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,81 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+    crossorigin="anonymous"
+  />
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://code.jquery.com/jquery-3.7.0.js"
+    integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+    crossorigin="anonymous"
+  ></script>
 </head>
 <body>
+<section id="content" class="alignLeft">
+  <div class="glowing-text-container">
+    <br/>
+    <p class="glowing-text" style="text-transform: uppercase">
+      RASAQUE MANHIQUE CABEÇA DE LISTA Da FRELIMO PARA CIDADE DE MAPUTO
+    </p>
+  </div>
   <app-root></app-root>
+  <section id="footer" class="mt-auto" style="overflow: hidden;">
+    <section class="contact-area" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 offset-lg-3">
+            <div class="contact-content text-center" style="position: relative">
+
+
+              <div class="contact-social" style="z-index: 200; position: relative">
+                <ul class="">
+
+                  <li><a class="hover-target" href="http://www.facebook.com/profile.php?id=61550574983594"
+                         target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a class="hover-target" href="http://www.instagram.com/rasaquemanhique/" target="_blank"><i
+                    class="fab fa-instagram"></i></a></li>
+                  <li><a class="hover-target" href="https://www.youtube.com/@RasaqueManhique" target="_blank"><i
+                    class="fab fa-youtube"></i></a></li>
+
+                </ul>
+
+              </div>
+              <div class="contact-social" style="z-index: 200; position: relative">
+                <ul>
+
+                  <li><a href="https://web.facebook.com/FRELIMCIDADEMAPUTO" style="width: 90px">FRELIMO</a></li>
+                </ul>
+              </div>
+              <hr>
+
+              <br>
+              <div style="z-index: 0; position: relative" class="svg">
+                <a class=""><img src="./assets/lastest-logo.png" style="height: 200px;" alt="logo" preload="auto"/></a>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p>Copyright &copy; 2023 MQSolutions All Rights Reserved.</p>
+    </footer>
+  </section>
+</section>
+
 </body>
 </html>
